fix proper spacing for blog divs.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,11 +87,17 @@ body {
 .content-column {
     width: 80%;
     margin: 0 0 0 28px;
-    border: 4px solid orange;
+    padding-bottom: 24px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.5);
+}
+
+.content-frame {
+    border: 4px solid yellow;
 }
 
 .content-aside-wrapper {
     width: 20%;
+    border: 4px solid purple;
 }
 
 @media only screen and (max-width: 600px) {
@@ -117,7 +123,7 @@ body {
 .tags-wrapper {
     justify-content: space-between;
     margin: 8px;
-    line-height: 2.5;
+    line-height: 1.5;
 }
 
 .search-container {
@@ -154,7 +160,7 @@ body {
 
 .blog-title {
     color: var(--bg-black);
-    padding: 8px 0;
+    padding: 12px 0 8px;
 }
 
 .author {
@@ -204,7 +210,7 @@ body {
     border: 2px solid red;
 }
 
-.content-wrapper {
+.content-hero {
     border: 4px solid green;
     display: flex;
     justify-content: space-evenly;
@@ -216,5 +222,11 @@ body {
   .content-wrapper {
     flex-direction: column;
   }
+}
+
+.content-blogs {
+    border: 4px solid pink;
+    justify-content: space-evenly;
+    width: 98%;
 }
 
